--- a/index.html
+++ b/index.html
@@ -37,66 +37,134 @@
     <p>Tip: Arriba donde dice Discord obviamente te unes al Discord!</p>
   </div>
   <br>
-  <h2>Canales del Servidor Esenciales:</h2>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1408980366416412776" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">Anuncios</a></b><br>
-    Pa q te enteres
-   </div>
+  <h2>Acerca del servidor.</h2>
+  <br>
+  <div class="container">
+    <h1>Acerca de nosotros.</h1>
+    <b>DeltaPapus empezo como un server pequeño, Luego fuimos alcanzando miembros hasta alcanzar los 100 de hoy en día.</b>
+    <p>El server se enfoca en socializar sobre DELTARUNE y otros juegos de Toby Fox, pero también puedes hablar de otros temas siempre y cuando sigas las reglas.</p>
+    <p>El server fue fundado por Lemon el 23 de agosto del 2025, y actualmente es administrado por un equipo de staff dedicado a mantener el server seguro y divertido para todos. ¿O no?</p>
+    <p>Nos gusta tener una comunidad amigable y acogedora *talvez no*, donde los miembros pueden compartir sus intereses y hacer nuevos amigos.</p>
+    <p>Te estaremos esperando en el Servidor de Discord cuando te quieras unir! :3</p>
+    <button onclick="window.location.href='https://discord.gg/3rqcQjXFBW'" class="button">Unirme al Discord Hoy.</button>
   </div>
   <br>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">  
-    <b><a href="https://discord.com/channels/1408971645569335420/1408995249539383478" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">Autoroles</a></b><br>
-    Customiza pe
-   </div>
+  <h2>Nuestro equipo staff.</h2>
+  <br>
+  <h1>DeltaOwners</h1>
+  <br>
+  <div class="container staff-cards">
+    <div class="staff-card">
+      <img src="https://cdn.discordapp.com/avatars/802736771930390530/d9509cc09a2453941cd3622cc4b48bcf.webp?size=1024" alt="DeltaPapu" class="staff-avatar">
+      <h1>Lemon</h1>
+      <p>Fundador del server. Lo empezo todo.</p>
+    </div>
+    <div class="staff-card">
+      <img src="https://cdn.discordapp.com/avatars/1353189869027065936/2708094a66122e4739128f9323d8aa84.webp?size=1024" alt="Staff 2" class="staff-avatar">
+      <h3>The real kris dreemur</h3>
+      <p>DeltaOwner del server.</p>
+    </div>
+    <div class="staff-card">
+      <img src="https://cdn.discordapp.com/avatars/1279536516594401291/058c4def19f7db66f0833d07458e1b30.webp?size=1024" alt="Staff 3" class="staff-avatar">
+      <h3>Shebex</h3>
+      <p>DeltaOwner del servidor.</p>
+      </div>
+      <div class="staff-card">
+        <img src="https://cdn.discordapp.com/avatars/853425834710663188/0cc95c814cd0cb2b76e676b0530de4a6.webp?size=1024" alt="Staff 3" class="staff-avatar">
+        <h3>Stereo</h3>
+        <p>DeltaOwner del servidor. Viva argentina wacho!!!</p>
+      </div>  
+  </div>
   </div>
   <br>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" loading="lazy" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1408974368977059980" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">Reglas</a></b><br>
-    Reglas como dice el nombre
-   </div>
-  </div>
+  <h1>Moderadores</h1>
   <br>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" loading="lazy" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1409216784963342597" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">Aliados</a></b><br>
-    Aliados del Servidor
-   </div>
+  <div class="container staff-cards">
+    <div class="staff-card">
+      <img src="https://cdn.discordapp.com/avatars/718658789460672693/b4e1621b6ee592673442d831037027a3.webp?size=1024" alt="DeltaPapu" class="staff-avatar">
+      <h1>Ameasuste</h1>
+      <p>Moderador del servidor, De la primera votación del servidor. Agregó cosas útiles.</p>
+    </div>
+    <div class="staff-card">
+      <img src="https://cdn.discordapp.com/avatars/1099816512816168970/a_a5254c6f9f5dc9f954dd28940b1c54f8.gif?size=2048" alt="Staff 2" class="staff-avatar">
+      <h3>ImTassinggTV</h3>
+      <p>Moderador del server. Creo esta página. Sin el no verías esta página.</p>
+    </div>
+    <div class="staff-card">
+      <img src="https://cdn.discordapp.com/avatars/1066886606671323277/319c41a5f8fb8de6b356db0b6b7ada37.png?size=2048" alt="Staff 3" class="staff-avatar">
+      <h3>Nomik961</h3>
+      <p>Moderador del servidor. Es chill, y le gusta moderar y estar activo. :3</p>
+    </div>
   </div>
-  <br>
-  <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1408999982564114472" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">General</a></b><br>
-    Aqui e donde tu empieza a chatear
-   </div>
+  <div class="container" style="padding: 2rem 1rem;">
+    <h2 style="color:#8aff80; text-align:center; margin-bottom:0.5em;">Canales del Servidor Esenciales</h2>
+    <p style="text-align:center; color:#c0c0c0; margin-bottom:1.5em;">Estos son los canales más importantes del servidor. ¡Úsalos para enterarte de novedades, personalizar tu experiencia y conocer a la comunidad!</p>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 1.2em; justify-items: center;">
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1408980366416412776" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#Anuncios</a></b><br>
+          Novedades? Sigue este canal, en el que nadie pone noticias casi.
+        </div>
+      </div>
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1408995249539383478" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#Autoroles</a></b><br>
+          Personaliza tus roles para que no seas envidiado de todas formas.
+        </div>
+      </div>
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1408974368977059980" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#Reglas</a></b><br>
+          Lee las reglas para que no estes llorando después.
+        </div>
+      </div>
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1409216784963342597" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#Aliados</a></b><br>
+          Conoce los servidores panitas. Pa que vean la amistad.
+        </div>
+      </div>
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1408999982564114472" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#General</a></b><br>
+          Ojala no parezca tu escuela cuando no esta el maestro.
+        </div>
+      </div>
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1409000096200392715" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#Momos</a></b><br>
+          Me partí de la risa. No dire porque.
+        </div>
+      </div>
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1409000173048430752" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#Multimedia</a></b><br>
+          Comparte fotos de pies. O algo normal porfavor.
+        </div>
+      </div>
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1409000336596668528" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#Musika</a></b><br>
+          Rock an roll gente. El phonk es peor.
+        </div>
+      </div>
+      <div class="discord-info">
+        <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
+        <div class="discord-text">
+          <b><a href="https://discord.com/channels/1408971645569335420/1409000173048430752" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">#Arte</a></b><br>
+          Si no hay creatividad, no podrás hacer nada en la vida -ImTassinggTV
+        </div>
+      </div>
+    </div>
   </div>
-  <br>
-    <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1409000096200392715" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">Momos</a></b><br>
-    Me parte de la risa
-   </div>
-  </div>
-  <br>
-    <div class="container discord-info">
-  <img src="https://img.icons8.com/color/512/discord-logo.png" alt="Discord Logo" class="discord-logo">
-  <div class="discord-text">
-    <b><a href="https://discord.com/channels/1408971645569335420/1409000173048430752" target="_blank" rel="noopener noreferrer" loading="lazy" class="discord-link">Multimedia</a></b><br>
-    Envien fotos de pies.
-   </div>
-  </div>
-  <br>
-  <h2>Nuestro staff.</h2>
-
-  <br>  
   <h2>Juego de Roblox</h2>
   <div class="container discord-info">
   <img src="https://tse3.mm.bing.net/th/id/OIP.BcbMw170Er3JiCZBVwmt4AAAAA?r=0&pid=Api" alt="Roblox Logo" class="discord-logo">
@@ -119,14 +187,17 @@
    <script src="JS/buttons.js"></script>
    <!-- Footer -->
     <!-- Footer -->
-   <footer class="footer">
-    <p>Gracias por ver nuestra pagina!</p>
-    <ul>
-    <li><a href="https://youtube.com/@imtheDeltaPapu" target="_blank" class="hyperlink-link">YouTube</a></li>
-    <li><a href="https://discord.gg/3rqcQjXFBW" target="_blank" class="hyperlink-link">Discord</a></li>
-    </ul>
-    <button onclick="topFunction()" id="myBtn" class="button" title="Pa arriba">[(CLICK PARA IR ARRIBA!)]</button>
-    <p>&copy; 2025 DeltaPapus</p>
-   </footer>  
+      <footer class="footer enhanced-footer">
+        <div class="footer-content">
+          <h3>¡Gracias por visitar DeltaPapus!</h3>
+          <p>Conéctate con nosotros en nuestras redes sociales y mantente al tanto de todas las novedades.</p>
+          <ul class="footer-links">
+            <li><a href="https://youtube.com/@imtheDeltaPapu" target="_blank" class="hyperlink-link">YouTube</a></li>
+            <li><a href="https://discord.gg/3rqcQjXFBW" target="_blank" class="hyperlink-link">Discord</a></li>
+          </ul>
+          <button onclick="topFunction()" id="myBtn" class="button" title="Ir arriba">↑ Volver arriba</button>
+          <p class="footer-copyright">&copy; 2025 DeltaPapus.</p>
+        </div>
+      </footer>
 </html>
 
