--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
    </div>
   </div>
   <br>
-  <h2>Redes:</h2>
+  <h2>Webhook:</h2>
   <div class="discord-box">
    <h1>Mensaje Anonimo</h1>
    <button id="sendMsg">Enviar mensaje al Servidor.</button>
