--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
   <br>
   <nav class="navbar">
     <div class="navbar-left">
-      <div class="navbar-logo">
-        <img src="https://cdn.discordapp.com/icons/1408971645569335420/a_ac331567216651740e961cb9efb7a2e5.gif?size=2048" alt="Logo DeltaPapus" />
-      </div>
-      <a href="https://deltapapus.github.io" class="navbar-title">Info</a>
+      <a href="https://discord.gg/3rqcQjXFBW" class="navbar-logo" alt="Info" style="height:32px;vertical-align:middle;"><img src="https://cdn.discordapp.com/icons/1408971645569335420/a_8c29b24e902039643a70d5243978343d.gif?size=2048"/></a>
+      <a href="https://discord.gg/3rqcQjXFBW" class="navbar-title">DeltaPapus!</a>
+      <a href="https://youtube.com/@imtheDeltaPapu" class="navbar-link">YouTube</a>
+      </div> 
       <div class="navbar-categories">
-        <a href="https://discord.gg/3rqcQjXFBW" class="navbar-link">Discord</a>
       </div>
     </div>
     <div class="navbar-right">
       <button class="navbar-icon" title="Search" onclick="toggleSearchBox()">🔍</button>
-    </div>styles.css
+    </div>
   </nav>
   <div class="lang-es">
   <div class="container">
