--- a/index.html
+++ b/index.html
@@ -165,8 +165,16 @@
       </div>
     </div>
   </div>
-  <div class="container">
-    <iframe src="https://discord.com/widget?id=1408971645569335420&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  <br>
+  <div class="container" style="text-align:center;">
+    <h2>¿Quieres colaborar con DeltaPapus?</h2>
+    <p>Puedes sugerir ideas, reportar errores o compartir tus comentarios en nuestro <a href="https://discord.gg/3rqcQjXFBW" target="_blank" class="hyperlink-link">Discord</a> o usando el foro de abajo.</p>
+    <button onclick="window.location.href='https://discord.gg/3rqcQjXFBW'" class="button">¡Sugerir ahora!</button>
+  </div>
+  <br>
+  <div class="discord-box container" style="margin: 0 auto; text-align: center;">
+    <h1>Servidor de DC</h1>
+    <iframe src="https://discord.com/widget?id=1408971645569335420&theme=dark" width="250" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
   </div>
   <h2 class="center-text">Juego de Roblox</h2>
   <div class="container discord-info center-text">
@@ -203,9 +211,6 @@
   </div>
     </div>
     </div>
-    <php?
-     echo "salchipapitas"
-    ?>
     <br>
     </div>
   </body>
