--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
     </div>
     <p>Need help? Contact a DeltaProgrammer on Discord to create your account.</p>
   </div>
+  <div class="spinner"></div>
 </div>
 <!-- Scripts -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -398,7 +399,6 @@
 <script src="JS/buttons.js"></script>
 <script src="JS/scripts.js"></script>
 <script src="JS/navbar.js"></script>
-   <!-- Footer -->
     <!-- Footer -->
       <footer class="footer enhanced-footer">
         <div class="footer-content">
@@ -412,5 +412,6 @@
           <p class="footer-copyright">&copy; 2025 DeltaPapus.</p>
         </div>
       </footer>
+    <!--Si me estas viendo, ve a https://deltapapus.netlify.app/medescubristepedro-->
 </html>
 
