--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
   </div>
   <h2 class="center-text">Tambien..</h2>
-  <h1 class="center-text">Moderadores</h1>
+  <h1 class="center-text">Admins</h1>
   <br>
   <div class="container staff-cards">
     <div class="staff-card">
@@ -94,6 +94,22 @@
       <img src="https://cdn.discordapp.com/avatars/1066886606671323277/319c41a5f8fb8de6b356db0b6b7ada37.png?size=2048" alt="Staff 3" class="staff-avatar">
       <h3>Nomik961</h3>
       <p>Moderador del servidor. Es chill, y le gusta moderar y estar activo. :3</p>
+    </div>
+  </div>
+    </div>
+  <h2 class="center-text">No se acuerdan?</h2>
+  <h1 class="center-text">Ayudantes</h1>
+  <br>
+  <div class="container staff-cards">
+    <div class="staff-card">
+      <img src="https://cdn.discordapp.com/avatars/1392765286071140485/ff5637cd0e986239d92421c05abbce59.webp?size=1024" alt="DeltaPapu" class="staff-avatar">
+      <h1>El_flay2.0</h1>
+      <p>Ayudante que apenas empezo aquí en el staff. Es muy activo.</p>
+    </div>
+    <div class="staff-card">
+      <img src="https://cdn.discordapp.com/avatars/1348778895096283136/bb5b78ce5bb83c60a77225be73d40a74.webp?size=1024" alt="Staff 2" class="staff-avatar">
+      <h3>Da_Zalev</h3>
+      <p>Este tio se papeo a todos en las postulaciones, un crack.</p>
     </div>
   </div>
   <div class="container" style="padding: 2rem 1rem;">
