--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
   <br>
   <div class="container staff-cards">
     <div class="staff-card">
-      <img src="https://cdn.discordapp.com/avatars/802736771930390530/d9509cc09a2453941cd3622cc4b48bcf.webp?size=1024" alt="DeltaPapu" class="staff-avatar">
+      <img src="https://cdn.discordapp.com/avatars/802736771930390530/2af8450cd1fd4a0e5855bd3103c4bfa6.webp?size=1024" alt="DeltaPapu" class="staff-avatar">
       <h1>Lemon</h1>
       <p>Fundador del server. Lo empezo todo.</p>
     </div>
     <div class="staff-card">
-      <img src="https://cdn.discordapp.com/avatars/1353189869027065936/2708094a66122e4739128f9323d8aa84.webp?size=1024" alt="Staff 2" class="staff-avatar">
+      <img src="https://cdn.discordapp.com/avatars/1353189869027065936/caad2db4596f40cf6530574a3a10fade.webp?size=1024" alt="Staff 3" class="staff-avatar">
       <h3>The real kris dreemur</h3>
-      <p>???</p>
+      <p>Familia wa</p>
     </div>
     <div class="staff-card">
       <img src="https://cdn.discordapp.com/avatars/1279536516594401291/2c6457896beb4adc8d90613661f56ecc.webp?size=1024" alt="Staff 3" class="staff-avatar">
@@ -71,7 +71,7 @@
       <p>DeltaOwner del servidor.</p>
     </div>
     <div class="staff-card">
-      <img src="https://cdn.discordapp.com/avatars/853425834710663188/0cc95c814cd0cb2b76e676b0530de4a6.webp?size=1024" alt="Staff 3" class="staff-avatar">
+      <img src="https://cdn.discordapp.com/avatars/853425834710663188/77bdc91914426ed4511d2a609fd5461a.webp?size=1024" alt="Staff 3" class="staff-avatar">
       <h3>Stereo</h3>
       <p>DeltaOwner del servidor. Viva argentina wacho!!!</p>
     </div>
