Added Easter Egg

--- a/index.html
+++ b/index.html
@@ -425,5 +425,6 @@
         </div>
       </footer>
     <!--Si me estas viendo, ve a https://deltapapus.netlify.app/medescubristepedro-->
+    <!-- ZZZ -->
 </html>
 
