--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Pagina DeltaPapus</title>
+  <title>DeltaPapus - Comunidad de Discord de Deltarune y más</title>
+  <meta name="description" content="DeltaPapus es una comunidad de Discord en español sobre Deltarune, Undertale y más. Únete para charlar, jugar y compartir memes.">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="https://www.example.com/favicon.ico">
