--- a/index.html
+++ b/index.html
@@ -180,6 +180,12 @@
   </div>
   <br>
   <div class="container" style="text-align:center;">
+    <h1>Embeds</h1>
+    <br>
+    <h2>Twitter</h2>
+    <blockquote class="twitter-tweet" data-media-max-width="560" data-lang="es"><p lang="sl" dir="ltr">Primer post!</p>&mdash; DELTAPAPUS Oficial (@deltapapus) <a href="https://twitter.com/deltapapus/status/1987045479033557242?ref_src=twsrc%5Etfw">8 de noviembre de 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <br>
+  <div class="container" style="text-align:center;">
     <h2>¿Quieres colaborar con DeltaPapus?</h2>
     <p>Puedes sugerir ideas, reportar errores o compartir tus comentarios en nuestro <a href="https://discord.gg/3rqcQjXFBW" target="_blank" class="hyperlink-link">Discord</a> o usando el foro de abajo.</p>
     <button onclick="window.location.href='https://discord.gg/3rqcQjXFBW'" class="button">¡Sugerir ahora!</button>
