--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>DeltaPapus</h1>
     <h2>Hola!, si no nos conoces:</h2>
     <b>Somos un server de discord para socializar sobre DELTARUNE y otros juegos de Toby Fox!</b>
-    <p></p>
+    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7YRw26jPUV8?si=fRqkmLTeGd9vlTld" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
   <br>
   <div class="container">
@@ -180,9 +180,9 @@
   </div>
   <br>
   <div class="container" style="text-align:center;">
-    <h1>Embeds</h1>
+    <h1>Tuits Buenisimos</h1>
     <br>
-    <h2>Twitter</h2>
+    <h2>Tuiter</h2>
     <blockquote class="twitter-tweet" data-media-max-width="560" data-lang="es"><p lang="sl" dir="ltr">Primer post!</p>&mdash; DELTAPAPUS Oficial (@deltapapus) <a href="https://twitter.com/deltapapus/status/1987045479033557242?ref_src=twsrc%5Etfw">8 de noviembre de 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   <br>
   <div class="container" style="text-align:center;">
